add courses and modules
